# pocketlang

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
cli/: common.h  internal.h  main.c  modules.c  modules.h  repl.c
docs/try/: main.c
src/: pk_buffers.h  pk_compiler.c  pk_compiler.h  pk_core.c  pk_core.h  pk_debug.c  pk_debug.h  pk_internal.h  pk_opcodes.h  pk_utils.c  pk_utils.h  pk_var.c  pk_var.h  pk_vm.c  pk_vm.h
src/include/: pocketlang.h
tests/native/: example1.c  example2.c
